--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MBrowser</string>
 
     <string name="home_hint">请输入搜索内容</string>
+    <string name="search_cancel">取消</string>
 </resources>
