--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="home_hint">请输入搜索内容</string>
     <string name="search_cancel">取消</string>
+    <string name="search_">搜索</string>
 </resources>
