‘书签页使用tabLayout设置指示器

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="menu_dark_mode">夜间模式</string>
     <string name="menu_2">2</string>
 
+    <!--书签页-->
+    <string name="bookmark">书签</string>
+    <string name="history">历史</string>
+
 </resources>
