--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
     <!--书签页-->
     <string name="bookmark">书签</string>
     <string name="history">历史</string>
+    <string name="finish">完成</string>
+    <string name="clear">清空</string>
+    <string name="delete">删除</string>
 
 </resources>
